# curves

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  release-plz.toml
.github/workflows/: dusk_ci.yml  release-plz.yml
benches/: bls12_381.rs
src/: bls12_381.rs  lib.rs
src/bls12_381/: backend_blst.rs  backend_dusk.rs
src/bls12_381/backend_blst/: g1.rs  g2.rs  mod.rs  pairings.rs  rkyv_tests.rs
src/bls12_381/backend_blst/g1/: rkyv.rs
src/bls12_381/backend_blst/g2/: rkyv.rs
src/bls12_381/backend_blst/pairings/: rkyv.rs
