[package]
name = "dusk-curves"
version = "0.1.0"
edition = "2024"

[dependencies]
dusk-bytes = "0.1"
blst = { version = "0.3", default-features = false, optional = true }
dusk-bls12_381 = { version = "0.14", default-features = false, features = ["groups", "pairings", "alloc"] }
rkyv = { version = "0.7", optional = true, default-features = false }

[features]
default = ["bls-backend-dusk"]
bls-backend-dusk = []
bls-backend-blst = ["dep:blst"]
# Forward dusk-bls12_381 features for downstream crates
default-bls = ["dusk-bls12_381/default"]
parallel = ["dusk-bls12_381/parallel"]
rkyv-impl = ["dusk-bls12_381/rkyv-impl", "dep:rkyv", "rkyv/size_64"]
