[package]
name = "dusk-curves"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
description = "Backend-agnostic elliptic curve primitives"
documentation = "https://docs.rs/dusk-curves"
repository = "https://github.com/dusk-network/curves"
readme = "README.md"
keywords = ["bls12-381", "elliptic-curves", "pairing", "cryptography"]
categories = ["cryptography", "mathematics"]
include = [
	"/Cargo.toml",
	"/LICENSE",
	"/README.md",
	"/src/**",
]

[dependencies]
dusk-bytes = "0.1"
blst = { version = "0.3", default-features = false, optional = true }
dusk-bls12_381 = { version = "0.14", default-features = false, optional = true }
group = { version = "0.13", default-features = false, optional = true }
hex = { version = "0.4", default-features = false, optional = true }
rand_core = { version = "0.6", default-features = false, optional = true }
serde = { version = "1", default-features = false, features = ["alloc"], optional = true }
sha2 = { version = "0.9", default-features = false, optional = true }
subtle = { version = "2", default-features = false, optional = true }
zeroize = { version = "1", default-features = false, optional = true }
rkyv = { version = "0.7", optional = true, default-features = false }
bytecheck = { version = "0.6", optional = true, default-features = false }

[features]
default = ["bls-backend-dusk"]
bls-backend-dusk = ["dep:dusk-bls12_381", "dep:sha2", "dusk-bls12_381/groups", "dusk-bls12_381/pairings", "dusk-bls12_381/alloc", "dusk-bls12_381/experimental"]
bls-backend-blst = ["dep:blst", "dep:dusk-bls12_381", "dusk-bls12_381/alloc", "dusk-bls12_381/groups", "dep:group", "dep:rand_core", "dep:subtle"]
# Forward dusk-bls12_381 features where this crate's public surface depends on them.
default-bls = ["bls-backend-dusk", "dusk-bls12_381/default"]
parallel = ["dusk-bls12_381/parallel"]
rkyv-impl = ["dusk-bls12_381/rkyv-impl", "dep:rkyv", "dep:bytecheck", "rkyv/size_32", "rkyv/validation"]
serde = ["dep:hex", "dep:serde", "dusk-bls12_381/serde"]
zeroize = ["dep:zeroize"]

[dev-dependencies]
criterion = "0.5"
dusk-bls12_381 = { version = "0.14", default-features = false, features = ["alloc", "groups", "pairings", "experimental"] }
serde_json = "1"
sha2 = { version = "0.9", default-features = false }

[[bench]]
name = "bls12_381"
harness = false
